# tfmongodb

./: .gitignore  CMakeLists.txt  README.md
src/cpp/connector/: mongodb_connector.cpp  mongodb_connector.h
src/cpp/converter/: bsonconverter.cpp  bsonconverter.h  element_to_string.cpp  element_to_string.h
src/cpp/kernel/: tfmongodb_kernel.cc
src/cpp/op/: tfmongodb.cc
src/python/: tfmongodb.py  tfmongodb_linux.py  tfmongodb_macosx.py  tfmongodb_ops.py
